# OneForAll

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ci.yml  hits.json  justfile  plan.json  pyproject.toml
docker/: Dockerfile  Dockerfile.ollama  docker-compose.yml
src/oneforall/agents/: citation.py  critic.py  planner.py  searcher.py  summarizer.py  writer.py
src/oneforall/cli/: main.py
src/oneforall/db/: vector_store.py
src/oneforall/llm/: ollama_client.py
src/oneforall/utils/: http.py
tests/: test_citation.py  test_planner.py  test_searcher.py  test_smoke.py  test_summarizer.py  test_writer.py
