[project]
name = "oneforall"
version = "0.1.0"
description = ""
authors = [
    {name = "Spykra", email = "spyridonkrantas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai (>=0.118.0,<0.119.0)",
    "autogen (>=0.9,<0.10)",
    "duckduckgo-search (>=8.0.1,<9.0.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "chromadb (>=1.0.7,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "typer (>=0.15.3,<0.16.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.8"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.black]
line-length = 120

[tool.poetry.scripts]
oneforall = "oneforall.cli.main:app"
